[project]
name = "camel-farrier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.9.1",
    "geopandas>=1.1.3",
    "jupyter-book>=1.0.3,<2",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "sphinx-external-toc>=0.3.0,<1.1.0",
    "sphinxcontrib-mermaid>=2.0.2",
    "xarray>=2026.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "book_docs"]
